--- a/app/views/instapost_lessons/lessons/lesson_29.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_29.html.erb
@@ -19,13 +19,13 @@
 <%= image_tag 'instapost/inspect_element.png' %>
 
 <p>
-  Next, we need to look around for the background color that they are using. Usually, you can do this by clicking around on the <code>html</code> or <code>body</code> tag. In this case, I had to click around and look further. I found the background-color in the <code>main</code> section:
+  Next, we need to look around for the background color that they are using. Usually, you can do this by clicking around on the <code>html</code> or <code>body</code> tag. In this case, I had to click around and look further. I found the <code>background-color</code> in the <code>main</code> section:
 </p>
 
 <%= image_tag 'instapost/background-color.png', class: 'screenshot' %>
 
 <p>
-  We can see the background-color is <code>#fafafa</code>. In order to start writing our CSS, let's create a new css file called <code>master.scss</code> in our <code>app/assets/stylesheets</code> folder.
+  We can see the <code>background-color</code> is <code>#fafafa</code>. In order to start writing our CSS, let's create a new css file called <code>master.scss</code> in our <code>app/assets/stylesheets</code> folder.
 </p>
 
 <p>
