--- a/app/views/submissions/_for_lesson.html.erb
+++ b/app/views/submissions/_for_lesson.html.erb
@@ -5,7 +5,7 @@
       <h3 class="question-header mentee_title text-center">
         <span class="back_to_dashboard">
           <% if @user_submission %>
-            <%= link_to 'My Submission', submission_path(@user_submission.id), class: 'btn btn-back btn-default' %>
+            <%= link_to 'My Submission', submission_path(@user_submission.id), class: 'btn btn-back btn-default', :"data-no-turbolink" => true %>
           <% else %>
             <%= link_to 'Submit Your Work', new_submission_path(course_name: controller_name.classify, lesson_id: params[:id]), class: 'btn btn-back btn-default' %>
           <% end %>
@@ -22,7 +22,7 @@
   <% @paginated_submissions.order("created_at DESC").each do |submission| %>
 
     <%= render partial: 'submissions/submission', locals: {submission: submission} %>
-    
+
   <% end %>
 
   <%= will_paginate @paginated_submissions, renderer: BootstrapPagination::Rails %>
@@ -32,7 +32,7 @@
   <hr>
 
   <% @submissions.order("created_at DESC").each do |submission| %>
-    
+
 
     <%= render partial: 'submissions/submission', locals: {submission: submission} %>
 
@@ -46,7 +46,7 @@
   <hr>
   <h4><%= link_to @user_submission.title, submission_path(@user_submission.id) %> <%= '<i class="fa fa-check-circle" style="margin-left: 5px; color: #5cb85c;" aria-hidden="true"></i>'.html_safe %>
   </h4>
-  
+
   <p class="alert alert-success">To view submissions by other students, have your submission approved by a mentor.</p>
 
 <% else %>
