--- a/app/views/community/index.html.erb
+++ b/app/views/community/index.html.erb
@@ -28,7 +28,7 @@
                   <%= simple_form_for :question, url: questions_path, method: :post, input_html: {class: 'form-horizontal'} do |f| %>
                     <%= f.input :title, required: true %>
                     <div data-no-turbolink>
-                      <%= f.cktext_area :content, as: :text, input_html: {rows: 6}, ckeditor: {language: 'us'}, required: true, class: 'ckeditor' %>
+                      <%= f.input :content, as: :text, input_html: {rows: 6}, required: true %>
                     </div>
                     <%= f.input :mentor_post, as: :hidden, input_html: { value: true } %>
                   </div>
@@ -103,12 +103,12 @@
               </div><!-- reply_count_container -->
             </div><!-- col-xs-12 col-sm-2 -->
           </div><!-- row -->
-          
+
         </li><!-- question_container -->
       </ul><!-- question_list -->
     <% end %>
 
     <%= will_paginate @questions, renderer: BootstrapPagination::Rails, remote: true %>
-   
+
   </div><!-- panel-body -->
 </div><!-- panel -->
