--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/styles/railscasts.min.css">
   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/languages/erb.min.js"></script>
-  
+
 </head>
 
 <body id="page-top" class="index course_html">
@@ -35,7 +35,7 @@
   </div>
 
   <%= render '/layouts/lesson_footer' %>
-  
+
   <%= render '/layouts/audio' %>
 
   <script type="text/javascript">
@@ -49,6 +49,9 @@
   });
   $(document).on('page:restore', function() {
     $('pre code').each(function(i, e) {hljs.highlightBlock(e)});
+  });
+  $(document).ready(function() {
+    $('[data-provider="summernote"]').summernote();
   });
   </script>
 </body>
