--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -36,9 +36,7 @@
 
   <%= simple_form_for :question, url: questions_path, method: :post, input_html: {class: 'form-horizontal'} do |f| %>
     <%= f.input :title, required: true %>
-    <div data-no-turbolink>
-      <%= f.cktext_area :content, as: :text, input_html: {rows: 6}, ckeditor: {language: 'us'}, required: true, class: 'ckeditor' %>
-    </div>
+      <%= f.input :content, as: :summernote, input_html: {rows: 6}, required: true %>
     <%= f.input :lesson_id, as: :hidden, input_html: { value: params[:lesson_id]} %>
     <%= f.input :course_name, as: :hidden, input_html: { value: params[:course_name]} %>
 
@@ -47,3 +45,9 @@
   <% end %>
 
 </div>
+
+<script type="text/javascript">
+  $(document).ready(function() {
+    $('[data-provider="summernote"]').summernote();
+  });
+</script>
