--- a/app/views/replies/edit.html.erb
+++ b/app/views/replies/edit.html.erb
@@ -15,7 +15,7 @@
 
   <%= simple_form_for @reply, url: question_reply_path(params[:question_id], params[:id]), method: :patch, input_html: {class: 'form-horizontal'} do |f|  %>
     <div data-no-turbolink>
-      <%= f.cktext_area :content, label: 'Comment', ckeditor: {language: 'us'}, required: true, class: 'ckeditor' %>
+      <%= f.input :content, label: 'Comment', required: true %>
     </div>
 
     <br>
