--- a/app/views/submissions/new.html.erb
+++ b/app/views/submissions/new.html.erb
@@ -23,8 +23,8 @@
 
 <%= simple_form_for :submission, url: submissions_path, method: :post, input_html: {class: 'form-horizontal'} do |f| %>
   <%= f.input :title, required: true %>
-  <div data-no-turbolink>
-    <%= f.cktext_area :content, as: :text, input_html: {rows: 6}, ckeditor: {language: 'us'}, required: true, class: 'ckeditor' %>
+  <div data-no-turbolink="true">
+    <%= f.input :content, as: :summernote, input_html: {rows: 6}, required: true %>
   </div>
   <%= f.input :lesson_id, as: :hidden, input_html: { value: params[:lesson_id]} %>
   <%= f.input :course_name, as: :hidden, input_html: { value: params[:course_name]} %>
