add ajax lessons

--- a/app/views/instapost_lessons/lessons/lesson_10.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_10.html.erb
@@ -27,10 +27,10 @@ root 'posts#index'
 </p>
 
 <div class="well">
-  <h3>No Template Found Error</h3>
+  <h3>Missing Template Error</h3>
 
   <p>
-    In Rails, when you get the No Template Found Error, it means that you are missing a view file for the application to render. If you recall from the Ideator post, Rails will try to find a view file with the same name as the controller action being called.
+    In Rails, when you get the Missing Template Error, it means that you are missing a view file for the application to render. If you recall from the Ideator post, Rails will try to find a view file with the same name as the controller action being called.
   </p>
 
   <blockquote>
@@ -41,7 +41,7 @@ root 'posts#index'
   </blockquote>
 
   <p>
-    When Rails can't find a file with the same name as the controller action being called, it will give you the "No Template Found" error. In this case you have mainly two options:
+    When Rails can't find a file with the same name as the controller action being called, it will give you the "Missing Template" error. In this case you have mainly two options:
   </p>
 
   <ul>
@@ -55,7 +55,7 @@ root 'posts#index'
     </p>
 
     <p>
-      For example, this code will give you a "No Template Found" error:
+      For example, this code will give you a "Missing Template" error:
     </p>
 <pre><code class="ruby">
 def create
