--- a/app/views/instapost_lessons/lessons/lesson_13.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_13.html.erb
@@ -25,7 +25,7 @@ resources :posts
 </p>
 
 <p>
-  Woops! Rails is giving us the "No Template Found" error! (Go to <%= link_to 'this lesson', 'instapost_lessons/10' %> to review what this error means.) We can either redirect the user or make the corresponding view file. In this case, let's go ahead and make it.
+  Woops! Rails is giving us the "Missing Template" error! (Go to <%= link_to 'this lesson', 'instapost_lessons/10' %> to review what this error means.) We can either redirect the user or make the corresponding view file. In this case, let's go ahead and make it.
 </p>
 
 <p>
