--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -45,7 +45,7 @@
                             </span>
                         </p>
                         <p class="tel"><i class="fa fa-phone"></i> 9808378374</p>
-                        <p class="email"><i class="fa fa-envelope-o"></i><a href="#"> natsuko@techrise.me</a></p> 
+                        <p class="email"><i class="fa fa-envelope-o"></i><a href="#"> contact@techrise.me</a></p> 
                         <ul class="social list-inline">
                             <!-- <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li> -->
                             <li><a href="https://www.facebook.com/TECHRISE-200095187051747/?fref=ts"><i class="fa fa-facebook"></i></a></li>
