--- a/app/views/static_pages/contact_us.html.erb
+++ b/app/views/static_pages/contact_us.html.erb
@@ -47,7 +47,7 @@
         <p class="intro">You can also get in touch with us here.</p>
         <div class="row">
             <ul class="other-info list-unstyled col-md-6 col-sm-10 col-xs-12 col-md-offset-3 col-sm-offset-1 xs-offset-0" >
-                <li><i class="fa fa-envelope-o"></i><a href="mailto:contact@techrise.com">natsuko@techrise.me</a></li>
+                <li><i class="fa fa-envelope-o"></i><a href="mailto:contact@techrise.com">contact@techrise.me</a></li>
                 <li><i class="fa fa-facebook"></i><a href="https://www.facebook.com/TECHRISE-200095187051747/?fref=ts" target="_blank">TECHRISE Facebook Page</a></li>
                 <li><i class="fa fa-phone"></i><a href="tel:+818061747394">9808378374</a></li>
                 <!-- <li><i class="fa fa-map-marker"></i>Queen Square <br /> 56 College Green Road<br />BS1 XR18<br />Bristol<br />UK</li> -->
