change format to bash

--- a/app/views/instapost_lessons/lessons/lesson_33.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_33.html.erb
@@ -28,7 +28,7 @@ gem 'acts_as_votable', '~> 0.10.0'
   Next, go into your terminal and run the following commands:
 </p>
 
-<pre><code class="ruby">
+<pre><code class="bash">
 rails generate acts_as_votable:migration
 rake db:migrate
 </code></pre>
