--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,9 @@
   $(document).on('page:restore', function() {
     $('pre code').each(function(i, e) {hljs.highlightBlock(e)});
   });
-
+  $(document).ready(function() {
+      $('#post_body').summernote();
+    });
 
 
   // ---
