--- a/app/views/submissions/edit.html.erb
+++ b/app/views/submissions/edit.html.erb
@@ -17,7 +17,7 @@
 <%= simple_form_for @submission, method: :patch, input_html: {class: 'form-horizontal'} do |f| %>
   <%= f.input :title, required: true %>
   <div data-no-turbolink>
-    <%= f.input :content, as: :text, input_html: {rows: 6}, required: true %>
+    <%= f.input :content, as: :summernote, input_html: {rows: 6}, required: true %>
   </div>
   <%= f.submit 'Submit', class: 'btn btn-primary' %>
 <% end %>
