summernote added in community index and question show page

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -82,7 +82,7 @@
 
   <%= simple_form_for :reply, url: question_replies_path(params[:id]), method: :post, input_html: {class: 'form-horizontal'} do |f|  %>
     <div data-no-turbolink>
-      <%= f.input :content, as: :text, label: 'Comment', required: true %>
+      <%= f.input :content, as: :summernote, label: 'Comment', required: true %>
     </div>
     <%= f.input :user_id, as: :hidden, input_html:{ value: current_user.id } %>
 
