--- a/app/views/community/index.html.erb
+++ b/app/views/community/index.html.erb
@@ -28,7 +28,7 @@
                   <%= simple_form_for :question, url: questions_path, method: :post, input_html: {class: 'form-horizontal'} do |f| %>
                     <%= f.input :title, required: true %>
                     <div data-no-turbolink>
-                      <%= f.input :content, as: :text, input_html: {rows: 6}, required: true %>
+                      <%= f.input :content, as: :summernote, input_html: {rows: 6}, required: true %>
                     </div>
                     <%= f.input :mentor_post, as: :hidden, input_html: { value: true } %>
                   </div>
