--- a/app/assets/stylesheets/admin_dashboard.scss
+++ b/app/assets/stylesheets/admin_dashboard.scss
@@ -1,3 +1,15 @@
-// Place all the styles related to the admin_dashboard controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.stat-box {
+  border-radius: 100%;
+  border: 1px solid #eee;
+  width: 200px;
+  height: 200px;
+  padding-top: 40px;
+  border: 4px solid #eee;
+  margin-bottom: 20px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.stat-box-text {
+  font-size: 40px;
+}
