--- a/app/views/admin_dashboard/index.html.erb
+++ b/app/views/admin_dashboard/index.html.erb
@@ -1,18 +1,123 @@
-<div class = "container" >
-  <div class = "row">
+<h1 class="text-center" style="margin-bottom: 50px">Admin Dashboard</h1>
 
-    <h4>Total Users: <%= @users.count %></h4>
-    
-    <% @users.each do |user| %>
-      <ul class="unindented_ul">
-        <li>Name: <%= user.name %></li>
-        <li>Email: <%= user.email %></li>
-        <li>Admin: <%= user.admin %></li>
-        <li>Last Logged In: <%= user.last_sign_in_at %></li>
-        <li>Sign In Count: <%= user.sign_in_count %></li>
-      </ul>
-    <% end %>
+<div class="devise_box">
+  <ul class="nav nav-tabs">
+    <li class="active"><a data-toggle="tab" href="#statistics">STATS</a></li>
+    <li><a data-toggle="tab" href="#logs">LOGS</a></li>
+    <li><a data-toggle="tab" href="#weekly_logs">WEEKLY LOGS</a></li>
+  </ul>
+
+  <div class="tab-content">
+    <div id="statistics" class="tab-pane fade in active">
+
+      <div class="row">
+        <% @stat_hash.each do |users, label| %>
+          <div class="col-xs-12 col-md-4">
+            <div class="stat-box text-center">
+              <div class="stat-box-text">
+                <%= users.count %>
+              </div><!-- stat-box-text -->
+
+              <div class="stat-box-label">
+                <%= label.upcase %>
+              </div><!-- stat-box-label -->
+            </div><!-- stat-box -->
+          </div><!-- col-xs-12 col-md-4 -->
+        <% end %>
+      </div><!-- row-->
+    </div><!-- statistics -->
+
+    <div id="logs" class="tab-pane fade">
+      <%= will_paginate @mentor_sessions %>
+
+      <% @mentor_sessions.each do |mentor_session| %>
+        <div class="panel">
+          <div class="panel-body">
+            <div class="row">
+              <div class="col-xs-12">
+                <small class="mentor_session_date"><%= display_datetime(mentor_session.session_date) %></small>
+              </div>
+            </div>
+            <br>
+
+            <div class="mentor_blob">
+              <div class="row">
+                <div class="col-xs-12 col-sm-2">
+                  <%= image_tag mentor_session.mentor.avatar, class: 'mentor_prof' %>
+                  <h5 class="text-center"><%= mentor_session.mentor.name %></h5>
+                </div>
+                <div class="col-xs-12 col-sm-10">
+                  <div class="public_details">
+                    <p>Public: <%= mentor_session.public_details %></p>
+                    <p>Private: <%= mentor_session.private_details %></p>
+                    <div class="triangle"></div>
+                  </div>
+                </div>
+              </div><!-- row-->
+            </div><!-- mentor_blob -->
+
+            <div class="mentor_blob">
+              <div class="row">
+                <div class="col-xs-12 col-sm-10">
+                  <div class="public_details">
+                    <% if mentor_session.student_session %>
+                      <p>Public: <%= mentor_session.student_session.public_details %></p>
+                      <p>Private: <%= mentor_session.student_session.private_details %></p>
+                    <% else %>
+                      <p>Student has not yet logged their mentor session.</p>
+                    <% end %>
+                    <div class="triangle-right"></div>
+                  </div>
+                </div><!-- col-xs-12 col-sm-10 -->
+                <div class="col-xs-12 col-sm-2">
+                  <%= image_tag mentor_session.user.avatar, class: 'mentor_prof' %>
+                  <h5 class="text-center"><%= mentor_session.user.name %></h5>
+                </div><!-- col-xs-12 col-sm-2 -->
+              </div><!-- row-->
+            </div><!-- mentor_blob -->
+
+            <div class="row">
+              <div class="col-xs-12 col-sm-6">
+                <div class="session_details">
+                  <h3>Student Motivation</h3>
+                  <% if mentor_session.student_session %>
+                    <p><%= mentor_session.student_session.try(:motivation_level) %></p>
+                  <% else %>
+                    <p>Student has not yet logged their mentor session.</p>
+                  <% end %>
+                </div>
+              </div>
+
+              <div class="col-xs-12 col-sm-6">
+                <div class="session_details">
+                    <h3>Homework Assigned</h3>
+                    <p><%= mentor_session.homework_assigned %></p>
+                </div>
+              </div>
+            </div><!-- row -->
+
+          </div><!-- panel-body -->
+        </div><!-- panel -->
+      <% end %>
+
+      <%= will_paginate @mentor_sessions %>
+
+    </div><!-- private_logs -->
 
 
+    <div id="weekly_logs" class="tab-pane fade">
+      <p>
+        To be developed :)
+      </p>
+    </div>
   </div>
+
+
 </div>
+
+<script type="text/javascript">
+$('#myTabs a').click(function (e) {
+  e.preventDefault()
+  $(this).tab('show')
+})
+</script>
