--- a/app/views/admin_dashboard/index.html.erb
+++ b/app/views/admin_dashboard/index.html.erb
@@ -48,8 +48,8 @@
                 </div>
                 <div class="col-xs-12 col-sm-10">
                   <div class="public_details">
-                    <p>Public: <%= mentor_session.public_details %></p>
-                    <p>Private: <%= mentor_session.private_details %></p>
+                    <p><strong>PUBLIC</strong> <%= mentor_session.public_details %></p>
+                    <p><strong>PRIVATE</strong> <%= mentor_session.private_details %></p>
                     <div class="triangle"></div>
                   </div>
                 </div>
