--- a/app/views/static_pages/dashboard.html.erb
+++ b/app/views/static_pages/dashboard.html.erb
@@ -60,7 +60,7 @@
 
               <div class="row" style="margin-top:20px;">
                 <div class="col-xs-12">
-                  <h3><%= link_to 'Continue Lesson <i class="fa fa-caret-right" style="margin-left: 5px;" aria-hidden="true"></i>'.html_safe, '/' + @last_lesson.parameters[:course_name].underscore + "s/" + @last_lesson.parameters[:lesson_id], class: 'btn btn-danger' %></h3>
+                  <h3><%= link_to '<i class="fa fa-caret-right" style="margin-left: 5px;" aria-hidden="true"></i> Continue Lesson'.html_safe, '/' + @last_lesson.parameters[:course_name].underscore + "s/" + @last_lesson.parameters[:lesson_id], class: 'btn btn-danger' %></h3>
                 </div>
               </div><!-- row -->
             </div><!-- col-xs-12 col-md-6 col-md-offset-3 -->
@@ -88,23 +88,29 @@
 
     <div class="panel">
       <div class="panel-heading-stats">
-        <h3><i class="fa fa-bar-chart" aria-hidden="true"></i> Your Stats</h3>
+        <h3>My Stats</h3>
       </div>
       <div class="panel-body">
-        <h5 class="pull-right">View your <%= link_to 'Activity Log', activity_log_path %></h5>
 
-        <h4><strong>Today</strong></h4>
-        <ul class="unindented_ul">
-          <li><small><i class="fa fa-check" aria-hidden="true"></i> <%= @lessons.where("created_at >= ?", Time.zone.now.beginning_of_day).count %></small> Lessons Completed</li>
-          <li><small><i class="fa fa-pencil" aria-hidden="true"></i> <%= @flashcards.where("created_at >= ?", Time.zone.now.beginning_of_day).count %></small> Flashcards Completed</li>
-        </ul>
-        <h4><strong>This Week</strong></h4>
-        <ul class="unindented_ul">
-          <li><small><i class="fa fa-check" aria-hidden="true"></i> <%= @lessons.where("created_at >= ?", 1.week.ago).count %></small> Lessons Completed</li>
-          <li><small><i class="fa fa-pencil" aria-hidden="true"></i> <%= @flashcards.where("created_at >= ?", 1.week.ago).count %></small> Flashcards Completed</li>
-        </ul>
+        <div class="row">
+          <% @stat_hash.each do |stat, label| %>
+            <div class="col-xs-12 col-md-6">
+              <div class="stat-box-dashboard text-center">
+                <div class="stat-box-dashboard-text">
+                  <%= stat.try(:count) %>
+                </div><!-- stat-box-text -->
 
-      </div><!-- panel-heading-stats -->
+                <div class="stat-box-dashboard-label">
+                  <%= label.upcase %>
+                </div><!-- stat-box-label -->
+              </div><!-- stat-box -->
+            </div><!-- col-xs-12 col-md-4 -->
+          <% end %>
+        </div><!-- row-->
+
+        <h5 class="pull-right"><i class="fa fa-caret-right" style="margin-left: 5px;" aria-hidden="true"></i> View your <%= link_to 'Activity Log', activity_log_path %></h5>
+
+      </div><!-- panel-body -->
     </div><!-- panel -->
   </div><!-- col-xs-12 col-md-4 -->
 
@@ -112,31 +118,33 @@
     <div class="panel">
       <div class="panel-body">
         <%= image_tag current_user.avatar, class: 'prof_pic_sm' %>
-        <h3>You have <%= pluralize(@cards.count, 'card') %> to review today - <%= link_to 'Study Flashcards', study_path %></h3>
+        <h3 class="text-center">You have <%= pluralize(@cards.count, 'card') %> to review today</h3>
         <blockquote>
           <%= @quote[0] %>
           <small><%= @quote[1] %></small>
         </blockquote>
+
+        <h3><%= link_to 'Study Flashcards', study_path, class: 'btn btn-danger btn-block' %></h3>
       </div><!-- panel-body -->
     </div>
 
       <div class="panel">
         <div class="panel-heading-stats">
-          <h3><i class="fa fa-question-circle" aria-hidden="true"></i> Your Questions</h3>
+          <h3>My Questions</h3>
         </div>
         <div class="panel-body">
 
           <ul class="unindented_ul">
             <% @questions.each do |question| %>
               <% course_name = Tags::LESSONS[question.course_name.underscore + "s"].keys[question.lesson_id - 1][1] %>
-              <li><%= link_to question.title, question_path(question) %> in <strong><%= course_name %></strong> <%= '<i class="fa fa-check-circle" style="margin-left: 5px; color: #5cb85c;" aria-hidden="true"></i>'.html_safe if question.resolved %></li>
+              <li><span class="question_list_title"><%= link_to question.title, question_path(question) %></span> in <span class="question_list_course_name"><%= course_name %></span> <%= '<i class="fa fa-check-circle" style="margin-left: 5px; color: #5cb85c;" aria-hidden="true"></i>'.html_safe if question.resolved %></li>
             <% end %>
           </ul>
 
           <% if @questions.empty? %>
             <h3>You haven't asked any questions yet.</h3>
           <% else %>
-            <h5 class="pull-right"><%= link_to 'View all', questions_path %></h5>
+            <h5 class="pull-right"><%= link_to '<i class="fa fa-caret-right" style="margin-left: 5px;" aria-hidden="true"></i> View all'.html_safe, questions_path %></h5>
           <% end %>
 
 
@@ -146,21 +154,21 @@
 
     <div class="panel">
       <div class="panel-heading-stats">
-        <h3><i class="fa fa-check-circle" aria-hidden="true"></i> Your Submissions</h3>
+        <h3>My Submissions</h3>
       </div>
       <div class="panel-body">
 
         <ul class="unindented_ul">
           <% @submissions.each do |submission| %>
             <% course_name = Tags::LESSONS[submission.course_name.underscore + "s"].keys[submission.lesson_id - 1][1] %>
-            <li><%= link_to submission.title, submission_path(submission) %> in <strong><%= course_name %></strong> <%= '<i class="fa fa-check-circle" style="margin-left: 5px; color: #5cb85c;" aria-hidden="true"></i>'.html_safe if submission.approved %></li>
+            <li><span class="question_list_title"><%= link_to submission.title, submission_path(submission) %></span> in <span class="question_list_course_name"><%= course_name %></span> <%= '<i class="fa fa-check-circle" style="margin-left: 5px; color: #5cb85c;" aria-hidden="true"></i>'.html_safe if submission.approved %></li>
           <% end %>
         </ul>
 
         <% if @submissions.empty? %>
           <h3>You don't have any submissions yet.</h3>
         <% else %>
-          <h5 class="pull-right"><%= link_to 'View all', submissions_path %></h5>
+          <h5 class="pull-right"><%= link_to '<i class="fa fa-caret-right" style="margin-left: 5px;" aria-hidden="true"></i> View all'.html_safe, submissions_path %></h5>
         <% end %>
 
       </div><!-- panel-heading-stats -->
