change name to MVC

--- a/app/views/ideator_lessons/lessons/lesson_19.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_19.html.erb
@@ -29,7 +29,7 @@
 </p>
 
 <p>
-  Let's now add modify the <code>random</code> method to in the <code>static_pages_controller.rb</code> to look like this:.
+  Let's now add modify the <code>random</code> method to in the <code>static_pages_controller.rb</code> to look like this:
 </p>
 
 <pre><code class="ruby">
