--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 
     <%= render '/layouts/nav_lessons' %>
 
-    <div class="container">
+    <div class="container-fluid">
       <div class = "content">
 
         <% if devise_controller? %>
