--- a/app/views/study/index.html.erb
+++ b/app/views/study/index.html.erb
@@ -1,7 +1,37 @@
 <% title("Study Cards | TECHRISE") %>
 
-<div class="col-xs-12 col-md-8 col-md-offset-2">
-  <div id="card_container">
-    <%= render partial: 'cards/card', locals: { card: @cards.first, cards: @cards } %>
-  </div>
+<div id="card_container">
+  <%= render partial: 'cards/card', locals: { card: @cards.first, cards: @cards } %>
 </div>
+
+
+<script type="text/javascript">
+$(document).ready(function () {
+  var trigger = $('.hamburger'),
+      overlay = $('.overlay'),
+     isClosed = false;
+
+    trigger.click(function () {
+      hamburger_cross();      
+    });
+
+    function hamburger_cross() {
+
+      if (isClosed == true) {          
+        overlay.hide();
+        trigger.removeClass('is-open');
+        trigger.addClass('is-closed');
+        isClosed = false;
+      } else {   
+        overlay.show();
+        trigger.removeClass('is-closed');
+        trigger.addClass('is-open');
+        isClosed = true;
+      }
+  }
+  
+  $('[data-toggle="offcanvas"]').click(function () {
+        $('#wrapper').toggleClass('toggled');
+  });  
+});
+</script>
