change archive js

--- a/app/views/cards/archive.js.erb
+++ b/app/views/cards/archive.js.erb
@@ -1,4 +1,32 @@
-var tr = $("#card_<%= params[:card_id] %>");
-tr.fadeOut(400, function(){
-    tr.remove();
-});
+console.log("hi");
+
+var td = $('td').filter(function(){
+    return $(this).text() === 'Archive' && $(this).parent().is("#card_<%= params[:card_id] %>")
+})
+
+console.log(td);
+
+var text = "<%= link_to 'Unarchive', card_archive_path(card_id: @card.id), method: :patch, class: 'btn btn-danger', remote: true %>"
+
+console.log(text);
+
+<% if @card.archived %>
+  var text = "<%= link_to 'Unarchive', card_archive_path(card_id: @card.id), method: :patch, class: 'btn btn-danger', remote: true %>"
+<% else %>
+  var text = "<%= link_to 'Archive', card_archive_path(card_id: @card.id), method: :patch, class: 'btn btn-danger', remote: true %>"
+<% end %>
+
+td.html(text);
+
+td.fadeOut(400, function(){
+  td.html(text);
+}
+
+// var td = $('td').filter(function(){
+//     return $(this).text() === 'Archive' && $(this).parent().is("#card_66")
+// })
+
+
+// tr.fadeOut(400, function(){
+//     tr.remove();
+// });
