add new ruby lesson

--- a/app/views/ruby_core_lessons/lessons/lesson_1.html.erb
+++ b/app/views/ruby_core_lessons/lessons/lesson_1.html.erb
@@ -3,7 +3,7 @@
 <p>
   Congratulations on finishing your first Ruby application! The next step in becoming an awesome developer is to be able to think of solutions to problems and output it in code. Right now, you are most likely in the stage where you're not sure what you're doing at all - but it's perfectly normal and we expect it to be that way. The only way to get comfortable with programming is to practice, so that's what we're going to do.
 </p>
-
+<!-- 
 <p>
   We're first going to have you go through another set of great tutorials called <a href="https://rubymonk.com/" target="_blank">Ruby Monk</a> so that you can go through the fundamentals of Ruby again. The level of difficulty is a little bit higher than Codecademy, so it should be a good challenge.
 </p>
@@ -16,3 +16,68 @@
 <li>Start <strong>Ruby Primer</strong></li>
 <li>Finish <strong>Introduction To Ruby Objects</strong> to <strong>Introduction to Ruby Methods</strong></li>
 </ul>
+ -->
+
+<p>
+  We're going to start with easier problems, and then gradually move towards more difficult problems.
+</p>
+
+<div class="well">
+  <h3>I don't know where to start 😭</h3>
+  <p>
+    When you first tackle these problems, you probably won't know where to start at all. It takes practice to be able to think logically and clearly, but it's certainly worth the effort.
+  </p>
+
+  <p>
+    <strong>The first thing you want to do is to simplify the problem.</strong> Try to use real life examples or imagine yourself doing the task yourself. <strong>The second step is to break down the operations into bite size pieces.</strong> Think <strong><i>if I were to perform these operations, exactly how would I do it? How can I tell a person who can only take exact orders how to achieve the goal?</i></strong>. Once you have those steps down, it's time for you to start writing code. Writing all of your ideas out on paper really helps in visualizing your thoughts and often leads to clearer solutions.
+  </p>
+
+  <p>
+    It's going to be tough, but good luck! :)
+  </p>
+</div>
+
+<h3>Assignments</h3>
+<h5>DURATION: 1 week</h5>
+
+<h4>Problem Set 1</h4>
+<ol>
+  <li><a href="http://www.codewars.com/kata/53e30ec0116393fe1a00060b/train/ruby" target="_blank">Remove Duplicates</a></li>
+  <li><a href="http://www.codewars.com/kata/540f8a19a7d43d24ac001018/train/ruby" target="_blank">Arithmatic Sequence</a></li>
+  <li><a href="http://www.codewars.com/kata/537922daa79ca02290000d18/train/ruby" target="_blank">2 + 2 * 2</a></li>
+  <li><a href="http://www.codewars.com/kata/53d16bd82578b1fb5b00128c/train/ruby" target="_blank">Grader</a></li>
+  <li><a href="http://www.codewars.com/kata/53dc54212259ed3d4f00071c/train/ruby" target="_blank">Sum Array</a></li>
+</ol>
+
+<h4>Problem Set 2</h4>
+<ol>
+  <li><a href="http://www.codewars.com/kata/53369039d7ab3ac506000467/train/ruby" target="_blank">Convert Boolean to String</a></li>
+  <li><a href="http://www.codewars.com/kata/5265326f5fda8eb1160004c8/train/ruby" target="_blank">Convert Number to String</a></li>
+  <li><a href="http://www.codewars.com/kata/511f0fe64ae8683297000001/train/ruby" target="_blank">Add Item to Array</a></li>
+  <li><a href="http://www.codewars.com/kata/get-the-middle-character" target="_blank">Get the Middle Character</a></li>
+</ol>
+
+<h4>Problem Set 3</h4>
+<ol>
+  <li><a href="http://www.codewars.com/kata/rock-paper-scissors" target="_blank">Rock Paper Scissors</a></li>
+  <li><a href="http://www.codewars.com/kata/tip-calculator" target="_blank">Tip Calculator</a></li>
+  <li><a href="http://www.codewars.com/kata/how-do-i-compare-numbers" target="_blank">How do I compare numbers</a></li>
+  <li><a href="http://www.codewars.com/kata/number-of-people-in-the-bus" target="_blank">Number of People in the Bus</a></li>
+  <li><a href="http://www.codewars.com/kata/50654ddff44f800200000007/train/ruby" target="_blank">Short Long Short</a></li>
+</ol>
+
+<h4>Problem Set 4</h4>
+<ol>
+  <li><a href="http://www.codewars.com/kata/523b4ff7adca849afe000035/train/ruby" target="_blank">Function 1 - hello world</a></li>
+  <li><a href="http://www.codewars.com/kata/523b623152af8a30c6000027/train/ruby" target="_blank">Function 2 - squaring an argument</a></li>
+  <li><a href="http://www.codewars.com/kata/523b66342d0c301ae400003b/train/ruby" target="_blank">Function 3 - multiplying two numbers</a></li>
+  <li><a href="http://www.codewars.com/kata/514a7bb557cdc630ab00001d/train/ruby" target="_blank">Statistics Algorithm - Calculate Mean</a></li>
+</ol>
+
+<h4>Problem Set 5</h4>
+<ol>
+  <li><a href="http://www.codewars.com/kata/515e271a311df0350d00000f/train/ruby" target="_blank">Square(n) Sum</a></li>
+  <li><a href="http://www.codewars.com/kata/51c8991dee245d7ddf00000e/train/ruby" target="_blank">Reversed Words</a></li>
+  <li><a href="http://www.codewars.com/kata/535474308bb336c9980006f2/train/ruby" target="_blank">Greet Me</a></li>
+  <li><a href="http://www.codewars.com/kata/513f887e484edf3eb3000001/train/ruby" target="_blank">Ruby Person Class Bug</a></li>
+</ol>
