--- a/app/views/ruby_core_lessons/lessons/lesson_2.html.erb
+++ b/app/views/ruby_core_lessons/lessons/lesson_2.html.erb
@@ -11,7 +11,7 @@
 <h3>Check Palindrome</h3>
 
 <p>
-  Given a string, write a method called <code>check_palindrome</code> to check if it is a palindrome. <strong>A palindrome is a word or phrase that is the same read from the front and backwards (for example, "racecar", "eve").</strong> The palindrome does not need to be limited to words in the dictionary (strings like "eyebeye", "bsdfdsb" should be considered palindromes).
+  Given a string, write a method called <code>is_palindrome?</code> to check if it is a palindrome. <strong>A palindrome is a word or phrase that is the same read from the front and backwards (for example, "racecar", "eve").</strong> The palindrome does not need to be limited to words in the dictionary (strings like "eyebeye", "bsdfdsb" should be considered palindromes).
 </p>
 
 <p>
@@ -29,19 +29,19 @@
 
   <pre><code class="ruby">
   # Input
-  check_palindrome("Racecar")
+  is_palindrome?("Racecar")
 
   # Output
   true
 
   # Input
-  check_palindrome("rAcEcar")
+  is_palindrome?("rAcEcar")
 
   # Output
   true
 
   # Input
-  check_palindrome("banana")
+  is_palindrome?("banana")
 
   # Output
   false
