--- a/app/views/ruby_core_lessons/lessons/lesson_2.html.erb
+++ b/app/views/ruby_core_lessons/lessons/lesson_2.html.erb
@@ -67,15 +67,15 @@
     For most people, you can do this by <code>cd</code>ing into the folder like this:
   </p>
 
-  <pre><code class="ruby">
+<pre><code class="bash">
 cd ~/Downloads/is_palindrome
-  </code></pre>
+</code></pre>
 
   <p>
     Once you are in the folder in the terminal, <strong>run the following command</strong>:
   </p>  
 
-<pre><code class="ruby">
+<pre><code class="bash">
 bundle install
 </code></pre>
 
@@ -83,7 +83,7 @@ bundle install
     Next, run the following command:
   </p>
 
-<pre><code class="ruby">
+<pre><code class="bash">
 rspec
 </code></pre>
 
@@ -115,7 +115,7 @@ end
     Once you have implemented the solution, go into your terminal and run this command again:
   </p>
 
-<pre><code class="ruby">
+<pre><code class="bash">
 rspec
 </code></pre>
 
