add github instructions

--- a/app/views/ideator_lessons/lessons/lesson_2.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_2.html.erb
@@ -94,6 +94,10 @@ git push -u origin master
 </p>
 
 <p>
+  When you run this command, it might ask you for your username and password. If it does, then enter your Github username and Github password. 
+</p>
+
+<p>
   Once you are done with this process, let's make sure that everything is set up correctly. In your terminal, run the following command:
 </p>
 
