add heroku links

--- a/app/views/ideator_lessons/lessons/lesson_22.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_22.html.erb
@@ -18,7 +18,18 @@
 </p>
 
 <p>
-  Submit your app down below by pasting a link to your GitHub below! Congratulations on your hard work!
+  <strong>Submit your app down below by pasting a link to your GitHub below! Congratulations on your hard work!</strong>
 </p>
+
+<h3>Bonus Challenge</h3>
+
+<p>
+  If you want to deploy your application live on the internet, you can follow the links below. Try and figure it out! :)
+</p>
+
+<ol>
+  <li><%= link_to 'https://devcenter.heroku.com/articles/sqlite3#running-rails-on-postgres' %></li>
+  <li><%= link_to 'https://devcenter.heroku.com/articles/git#creating-a-heroku-remote' %></li>
+</ol>
 
 <% @submission_form = true %>
