--- a/app/views/ideator_lessons/lessons/lesson_7.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_7.html.erb
@@ -113,7 +113,7 @@
 	If you found correctly, the <code>.navbar-default</code> class is responsible for the color of the navbar. Since I want a clean looking site, I’m going to change the background color of <code>.navbar-default</code> to white.
 </p>
 
-<p>Let’s go into our <code>application.scss</code> and add this in.</p>
+<p>Let’s go into our <code>master.scss</code> and add this in.</p>
 
 <pre><code class = "css">
 .navbar-default {
